basics/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: my-nginx
spec:
  containers:
  - image: nginx
    imagePullPolicy: IfNotPresent
    name: nginx
  dnsPolicy: ClusterFirst
  restartPolicy: Never
